# fsi_piston

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  README.md  hello.cpp
References/: train_data.npy  train_data_accel.npy  train_data_disp.npy  train_data_velocity.npy
References/continuous/: train_accel.npy  train_disp.npy  train_pres.npy
References/discrete/: train_data_pres.npy  train_dt.npy
Results/: nln_Em.npy  results_Delta_T.txt  results_Delta_T_fixed_dt.txt  results_pres.txt  results_pres_field.txt  results_pres_field_fixed_dt.txt  results_pres_fixed_dt.txt  results_rho.txt  results_rho_e.txt  results_rho_e_fixed_dt.txt  results_rho_fixed_dt.txt  results_rho_v.txt  results_rho_v_fixed_dt.txt  results_v.txt  results_v_fixed_dt.txt
Results/nln_results/: nln_Ec.npy  nln_Ep.npy  nln_Imp_fl.npy  nln_delta_t.npy  nln_fl_velocity_end.npy  nln_pist_pressure.npy  nln_sol_accel.npy  results_Delta_T.txt  results_Ec.txt  results_Em.txt  results_Ep.txt  results_Imp_Fl.txt  results_m_accel.txt  results_pres.txt  results_v.txt
Results/nln_results_coeff_1/: nln_Ec.npy  nln_Em.npy  nln_Ep.npy  nln_Imp_fl.npy  nln_delta_t.npy  nln_fl_velocity_end.npy  nln_pist_pressure.npy  nln_sol_accel.npy  results_Delta_T.txt  results_Ec.txt  results_Em.txt  results_Ep.txt  results_Imp_Fl.txt  results_m_accel.txt  results_pres.txt  results_v.txt
include/: FSI.h  Fluid.h  Mesh.h  STRUC.h  algs.h  config.h  config.h.in  ppties.h
src/: FSI.cpp  Fluid.cpp  Mesh.cpp  STRUC.cpp  algs.cpp  main.cpp
tests/: CMakeLists.txt  test_wave.cpp
